style(booking-area): improve responsivenes of the booking area section to avoid layout shifts

--- a/src/style.css
+++ b/src/style.css
@@ -495,9 +495,8 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 5rem;
+  gap: 10rem;
 
-  height: 100%;
   width: 100%;
 }
 
@@ -516,7 +515,7 @@ button {
 .booking-area__content {
   align-self: start;
 
-  width: 25%;
+  max-width: 500px;
 }
 
 .booking-area__form {
@@ -526,6 +525,8 @@ button {
   gap: var(--spacing-md);
 
   margin-top: var(--spacing-xl);
+
+  width: 100%;
 }
 
 .booking-area__form-group {
